--- a/views/items/fields.njk
+++ b/views/items/fields.njk
@@ -4,5 +4,5 @@
         <input type="text" name="description" placeholder="Insira a descrição do item aqui" value="{{ item.description }}">
     </div>
 
-    <button type="submit">Cadastrar</button>
+    <button type="submit">Salvar</button>
 </div>
