--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 :root {
-    --primary-color: #7159c1;
+    --primary-color: #00afef;
     --secondary-color: #f7bf1e;
 }
 
@@ -8,23 +8,39 @@
     margin: 0;
     padding: 0;
     border: none;
+    box-sizing: border-box;
 }
 
 body {
     background-color: var(--primary-color);
     font-family: 'Roboto', sans-serif;
+    max-width: 100vw;
+    max-height: 100vh;
 }
 
 header {
     background-color: white;
-    width: 100%;
+    width: 100vw;
     padding: 32px;
     text-align: center;
     box-sizing: border-box;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: var(--primary-color);
+}
+
+header img {
+    width: 30vw;
+    padding: 0 16px;
 }
 
 .links {
     font-size: 22px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 10%;
+    color: #777;
 }
 
 .links a+a {
@@ -46,23 +62,6 @@ header {
     color: var(--primary-color);
 }
 
-.links a::after {
-    content: "";
-    width: 0;
-    height: 2px;
-    background-color: var(--primary-color);
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-}
-
-/* Pseudo-elemento */
-
-.links a:hover::after {
-    width: 100%;
-    transition: width 200ms ease-in-out;
-}
-
 /* CARD */
 
 .card {
@@ -71,9 +70,10 @@ header {
     min-height: 400px;
     margin: 45px auto;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     box-shadow: 0px 2px 6px -2px;
     animation: up 200ms ease;
+    text-align: center;
 }
 
 @keyframes up {
@@ -90,6 +90,8 @@ header {
 
 .details {
     padding: 32px;
+    align-items: center;
+    width: 60%;
 }
 
 .details .item {
