--- a/public/styles.css
+++ b/public/styles.css
@@ -18,6 +18,8 @@ body {
     max-height: 100vh;
 }
 
+/* HEADER */
+
 header {
     background-color: white;
     width: 100vw;
@@ -72,104 +74,79 @@ header img {
     display: grid;
     grid-template-columns: 1fr;
     box-shadow: 0px 2px 6px -2px;
-    animation: up 200ms ease;
     text-align: center;
+    position: relative;
 }
 
-@keyframes up {
-    from {
-        opacity: 0;
-        transform: translateY(15px);
-    }
-    to {
-        opacity: 1;
-    }
-}
+/* INDEX */
 
-/* DETAILS */
-
-.details {
-    padding: 32px;
-    align-items: center;
-    width: 60%;
-}
-
-.details .item {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 16px 0;
-}
-
-.details .item:nth-last-child(2) {
-    border: none;
-}
-
-.details h3, .details .item div:nth-child(1) {
-    font-size: 14px;
-    line-height: 24px;
-    color: #777;
-    letter-spacing: 0.7px;
-    font-weight: normal;
-}
-
-.details .item div:nth-child(2) {
-    color: #555;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.details h3 {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: var(--primary-color);
-}
-
-.details .item div:nth-child(2) span {
-    padding: 8px 16px;
-    background-color: var(--secondary-color);
-    border-radius: 16px;
-    color: #777;
-    margin-right: 4px;
-    margin-top: 8px;
-    display: inline-block;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 12px;
-}
-
-/* FORM */
-
-input {
-    width: 100%;
-    outline: none;
-    color: #555;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-input[type="radio"] {
-    width: initial;
-    margin-right: 4px;
-}
-
-input::placeholder {
-    font-size: 16px;
-    font-weight: normal;
-}
-
-button[type="submit"],
-a.button {
-    padding: 8px 32px;
-    background-color: var(--primary-color);
-    border-radius: 4px;
-    margin-top: 16px;
-    width: 100%;
-    color: white;
-    font-size: 16px;
-}
-
-a.button {
+.table-container {
     display: block;
+    padding: 30px;
     box-sizing: border-box;
-    text-align: center;
+    text-align: right;
+}
+
+.header-index {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.table-container .header-index>a {
+    margin-bottom: 16px;
+    display: inline-block;
+    background-color: var(--primary-color);
+    padding: 8px 16px;
     text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-size: 12px;
+    border-radius: 4px;
+}
+
+/* TABLE */
+
+table {
+    border-spacing: 0;
+    text-align: left;
+}
+
+.table-container thead tr th {
+    text-align: left;
+}
+
+td, th {
+    padding: 16px;
+    border-bottom: 1px solid #d9d9d9;
+}
+
+th {
+    text-transform: uppercase;
+    color: #777;
+    font-size: 14px;
+}
+
+tbody tr:last-child td {
+    border-bottom: none;
+}
+
+tbody tr td:last-child a {
+    background-color: var(--primary-color);
+    padding: 8px 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-size: 12px;
+    border-radius: 4px;
+}
+
+.table-container > a {
+    margin-bottom: 16px;
+    display: inline-block;
+}
+
+.table-container thead tr th:last-child,
+td:last-child {
+    text-align: center;
 }
