--- a/views/items/index.njk
+++ b/views/items/index.njk
@@ -2,10 +2,44 @@
 
 {% block content %}
 
-    <div class="card">
-        <section class="details">
-            <button><a href="/items/create">Create</a></button>
-        </section>
+    <div class="card table-container">
+        <div class="header-index">
+            <h2>Itens cadastrados</h2>
+            <a href="/items/create" class="new-button">Novo item</a>
+        </div>
+        <table width="100%">
+            <thead>
+                <tr>
+                    <th>ID do item</th>
+                    <th>Descrição do item</th>
+                    <th>Largura (mm)</th>
+                    <th>Altura (mm)</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for item in items %}
+                    <tr>
+                        <td>
+                            {{item.id}}
+                        </td>
+                        <td>
+                            {{item.description}}
+                        </td>
+                        <td>
+                            {{item.width}}
+                        </td>
+                        <td>
+                            {{item.height}}
+                        </td>
+                        <td>
+                            <a href="/items/{{item.id}}">Ver</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 
 {% endblock content %}
