--- a/views/items/index.njk
+++ b/views/items/index.njk
@@ -3,9 +3,9 @@
 {% block content %}
 
     <div class="card table-container">
-        <div class="header-index">
+        <div class="header-card">
             <h2>Itens cadastrados</h2>
-            <a href="/items/create" class="new-button">Novo item</a>
+            <a href="/items/create">Novo item</a>
         </div>
         <table width="100%">
             <thead>
