--- a/views/items/show.njk
+++ b/views/items/show.njk
@@ -1,10 +1,12 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card">
+    <div class="card item-show-container">
+        <div class="header-card">
+            <h2>Detalhes</h2>
+            <a href="/items/{{item.id}}/edit" class="button">Editar</a>
+        </div>
         <section class="details">
-
-            <h3>Detalhes</h3>
 
             <div class="item">
                 <div>Item</div>
@@ -15,8 +17,6 @@
                 <div>Criado em</div>
                 <div>{{item.created_at}}</div>
             </div>
-
-            <a href="/items/{{item.id}}/edit" class="button">Editar</a>
 
         </section>
     </div>
