--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 :root {
-    --primary-color: #00afef;
-    --secondary-color: #f7bf1e;
+    --cyan-color: #00afef;
+    --magenta-color: #ec268f;
+    --yellow-color: #f7bf1e;
+    --black-color: #373435;
 }
 
 * {
@@ -12,7 +14,7 @@
 }
 
 body {
-    background-color: var(--primary-color);
+    background-color: var(--cyan-color);
     font-family: 'Roboto', sans-serif;
     max-width: 100vw;
     max-height: 100vh;
@@ -29,7 +31,7 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    color: var(--primary-color);
+    color: var(--cyan-color);
 }
 
 header img {
@@ -37,7 +39,7 @@ header img {
     padding: 0 16px;
 }
 
-.links {
+header .links {
     font-size: 22px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -45,133 +47,97 @@ header img {
     color: #777;
 }
 
-.links a+a {
+header .links a+a {
     margin-left: 32px;
 }
 
-.links a {
+header .links a {
     text-decoration: none;
-    color: #777;
-    position: relative;
+    color: var(--black-color);
+    opacity: 0.8;
+    transition: 200ms;
 }
 
-.links a.active {
+header .links a.active {
     font-weight: bold;
-    color: var(--primary-color);
+    color: var(--cyan-color);
 }
 
-.links a:hover {
-    color: var(--primary-color);
+header .links a:hover {
+    color: var(--cyan-color);
 }
 
 /* CARD */
 
 .card {
-    background-color: white;
-    width: 90vw;
-    min-height: 400px;
+    max-width: 80vw;
+    max-height: 80vh;
+    min-height: 30vh;
     margin: 45px auto;
-    display: block;
-    box-shadow: 0px 2px 6px -2px;
-    text-align: center;
-    position: relative;
+    background-color: white;
     padding: 30px;
-    box-sizing: border-box;
 }
 
-.header-card {
+.card-header {
+    width: 100%;
+    color: var(--black-color);
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.header-card a {
-    margin-bottom: 16px;
-    background-color: var(--primary-color);
+a.button, button {
+    background-color: var(--cyan-color);
     padding: 8px 16px;
     text-decoration: none;
     text-transform: uppercase;
     color: white;
     font-size: 12px;
     border-radius: 4px;
+    cursor: pointer;
 }
 
-/* DETAILS */
-
-.details {
-    padding: 32px;
+.delete-button {
+    background-color: var(--magenta-color);
 }
 
-.details .item {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 16px 0;
+a.edit-button {
+    background-color: var(--yellow-color);
 }
 
-.details .item:nth-last-child(2) {
-    border: none;
+.buttons a + a {
+    margin-left: 12px;
 }
 
-.details h3, .details .item div:nth-child(1) {
-    font-size: 14px;
-    line-height: 24px;
-    color: #777;
-    letter-spacing: 0.7px;
-    font-weight: normal;
+/* CONTAINERS */
+
+.index-container {
+    width: 70vw;
 }
 
-.details .item div:nth-child(2) {
-    color: #555;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-.details h3 {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: var(--primary-color);
-}
-
-.details .item div:nth-child(2) span {
-    padding: 8px 16px;
-    background-color: var(--secondary-color);
-    border-radius: 16px;
-    color: #777;
-    margin-right: 4px;
-    margin-top: 8px;
-    display: inline-block;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 12px;
-}
-
-/* INDEX */
-
-.table-container {
-    display: block;
-    padding: 30px;
-    box-sizing: border-box;
-    text-align: right;
+.show-edit-create-container {
+    width: 40vw;
 }
 
 /* TABLE */
 
 table {
     border-spacing: 0;
-    text-align: left;
 }
 
-.table-container thead tr th {
-    text-align: left;
+table thead tr th, table tbody tr td {
+    text-align: center;
 }
 
-td, th {
-    padding: 16px;
+table td, th {
+    padding: 12px;
     border-bottom: 1px solid #d9d9d9;
 }
 
-th {
+table th {
     text-transform: uppercase;
-    color: #777;
-    font-size: 14px;
+    color: var(--black-color);
 }
 
 tbody tr:last-child td {
@@ -179,15 +145,58 @@ tbody tr:last-child td {
 }
 
 tbody tr td:last-child a {
-    background-color: var(--primary-color);
-    padding: 8px 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: white;
-    font-size: 12px;
-    border-radius: 4px;
+    background-color: var(--yellow-color);
 }
 
-.table-container thead tr th:last-child, td:last-child {
+thead tr th:nth-child(3), thead tr th:nth-child(4), tbody tr td:nth-child(3), tbody tr td:nth-child(4) {
+    width: 20%;
+}
+
+/* DETAILS */
+
+.details {
+    width: 100%;
     text-align: center;
+}
+
+.details .item {
+    display: inline;
+    padding: 12px;
+}
+
+.details .item div:first-child {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--black-color);
+    margin: 12px 0;
+    opacity: 0.7;
+}
+
+.details .item div:last-child {
+    color: var(--black-color);
+}
+
+.details button {
+    margin-top: 20px;
+}
+
+/* FORM */
+
+input, select {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    outline-color: #9e9d9d;
+    text-align: center;
+    font-size: 18px;
+}
+
+input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
