--- a/views/items/index.njk
+++ b/views/items/index.njk
@@ -1,16 +1,17 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-
-    <div class="card table-container">
-        <div class="header-card">
-            <h2>Itens cadastrados</h2>
-            <a href="/items/create">Novo item</a>
+    <div class="card index-container">
+        <div class="card-header">
+            <h2>Itens Cadastrados</h2>
+            <div class="buttons">
+                <a href="/items/create" class="button">Novo Item</a>
+            </div>
         </div>
         <table width="100%">
             <thead>
                 <tr>
-                    <th>ID do item</th>
+                    <th>ID</th>
                     <th>Descrição do item</th>
                     <th>Largura (mm)</th>
                     <th>Altura (mm)</th>
@@ -34,12 +35,12 @@
                             {{item.height}}
                         </td>
                         <td>
-                            <a href="/items/{{item.id}}">Ver</a>
+                            <a href="/items/{{item.id}}/edit" class="button">Editar</a>
                         </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
-
+    
 {% endblock content %}
