--- a/views/kits/fields.njk
+++ b/views/kits/fields.njk
@@ -1,20 +1,7 @@
 <div class="item">
     <div>Descrição</div>
     <div>
-        <input type="text" name="description" placeholder="Insira a descrição do item aqui" value="{{ item.description }}">
+        <input type="text" name="description" placeholder="Insira a descrição do kit aqui" value="{{ kit.description }}">
     </div>
 </div>
 
-<div class="item">
-    <div>Largura</div>
-    <div>
-        <input type="number" name="width" value="{{ item.width }}">
-    </div>
-</div>
-
-<div class="item">
-    <div>Altura</div>
-    <div>
-        <input type="number" name="height" value="{{ item.height }}">
-    </div>
-</div>
