--- a/src/app/views/items/fields.njk
+++ b/src/app/views/items/fields.njk
@@ -6,14 +6,14 @@
 </div>
 
 <div class="item">
-    <div>Largura</div>
+    <div>Largura (mm)</div>
     <div>
         <input type="number" name="width" value="{{ item.width }}">
     </div>
 </div>
 
 <div class="item">
-    <div>Altura</div>
+    <div>Altura (mm)</div>
     <div>
         <input type="number" name="height" value="{{ item.height }}">
     </div>
