--- a/src/app/views/kits/create.njk
+++ b/src/app/views/kits/create.njk
@@ -9,7 +9,7 @@
             
             {% include "kits/fields.njk" %}
 
-            <button type="submit">Salvar Item</button>
+            <button type="submit">Criar Kit</button>
         </form>
 
     </div>
