--- a/src/app/views/kits/edit.njk
+++ b/src/app/views/kits/edit.njk
@@ -5,20 +5,20 @@
         <div class="card-header">
             <h2>Detalhes</h2>
             <div class="buttons">
-                <form action="/items?_method=DELETE" method="post">
-                    <input type="hidden" name="id" value="{{ item.id }}">
-                    <button type="submit" class="delete-button">Excluir item</button>
+                <form action="/kits?_method=DELETE" method="post">
+                    <input type="hidden" name="id" value="{{ kit.id }}">
+                    <button type="submit" class="delete-button">Excluir kit</button>
                 </form>
 
             </div>
         </div>
-        <form action="/items?_method=PUT" method="post" class="details">
+        <form action="/kits?_method=PUT" method="post" class="details">
 
-            {% include "items/fields.njk" %}
+            {% include "kits/fields.njk" %}
 
-            <input type="hidden" name="id" value="{{ item.id }}">
+            <input type="hidden" name="id" value="{{ kit.id }}">
 
-            <button type="submit">Salvar item</button>
+            <button type="submit">Salvar kit</button>
         </form>
     </div>
 
