--- a/src/app/views/kits/index.njk
+++ b/src/app/views/kits/index.njk
@@ -27,7 +27,7 @@
                             {{kit.description}}
                         </td>
                         <td>
-                            <a href="/kits/{{kit.id}}/edit" class="button">Editar</a>
+                            <a href="/kits/{{kit.id}}" class="button">Ver</a>
                         </td>
                     </tr>
                 {% endfor %}
