--- a/src/app/views/kits/editItem.njk
+++ b/src/app/views/kits/editItem.njk
@@ -5,7 +5,7 @@
         <div class="card-header">
             <h2>Detalhes</h2>
             <div class="buttons">
-                <form action="/kitsItems?_method=DELETE" method="post">
+                <form action="/kitsItems?_method=DELETE" method="post" id="form-delete">
                     <input type="hidden" name="id" value="{{ item.id }}">
                     <button type="submit" class="delete-button">Excluir item</button>
                 </form>
@@ -21,5 +21,7 @@
             <button type="submit">Salvar Item</button>
         </form>
     </div>
+
+    {% include "confirmDelete.njk" %}
 
 {% endblock content %}
