--- a/src/app/views/kits/index.njk
+++ b/src/app/views/kits/index.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card index-container">
+    <div class="card kits-index-container">
         <div class="card-header">
             <h2>Kits Cadastrados</h2>
             <div class="buttons">
