--- a/src/app/views/clients/fields.njk
+++ b/src/app/views/clients/fields.njk
@@ -1,20 +1,6 @@
 <div class="item">
-    <div>Descrição</div>
+    <div>Nome do cliente</div>
     <div>
-        <input type="text" name="description" placeholder="Insira a descrição do item aqui" value="{{ item.description }}">
-    </div>
-</div>
-
-<div class="item">
-    <div>Largura</div>
-    <div>
-        <input type="number" name="width" value="{{ item.width }}">
-    </div>
-</div>
-
-<div class="item">
-    <div>Altura</div>
-    <div>
-        <input type="number" name="height" value="{{ item.height }}">
+        <input type="text" name="name" placeholder="Insira o nome do cliente aqui" value="{{ client.name }}">
     </div>
 </div>
