Production files created

--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -48,6 +48,13 @@
                         Clientes
                     </a>
                 </div>
+                <div class="link">
+
+                    <a href="/production">
+                        <i class="material-icons">construction</i>
+                        Produção
+                    </a>
+                </div>
             </div>
         </header>
 
