--- a/src/app/views/production/index.njk
+++ b/src/app/views/production/index.njk
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card index-container">
         <div class="card-header">
-            <h2>Estoque</h2>
+            <h2>Produção</h2>
             <div class="buttons">
                 <a href="/items/create" class="button">Novo Item</a>
             </div>
