--- a/src/app/views/stock/edit.njk
+++ b/src/app/views/stock/edit.njk
@@ -4,17 +4,10 @@
     <div class="card show-edit-create-container">
         <div class="card-header">
             <h2>Detalhes</h2>
-            <div class="buttons">
-                <form action="/items?_method=DELETE" method="post">
-                    <input type="hidden" name="id" value="{{ item.id }}">
-                    <button type="submit" class="delete-button">Excluir item</button>
-                </form>
-
-            </div>
         </div>
-        <form action="/items?_method=PUT" method="post" class="details">
+        <form action="/stock?_method=PUT" method="post" class="details">
 
-            {% include "items/fields.njk" %}
+            {% include "stock/fields.njk" %}
 
             <input type="hidden" name="id" value="{{ item.id }}">
 
