--- a/src/app/views/stock/index.njk
+++ b/src/app/views/stock/index.njk
@@ -4,17 +4,13 @@
     <div class="card index-container">
         <div class="card-header">
             <h2>Estoque</h2>
-            <div class="buttons">
-                <a href="/items/create" class="button">Novo Item</a>
-            </div>
         </div>
         <table width="100%">
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Descrição do item</th>
-                    <th>Largura (mm)</th>
-                    <th>Altura (mm)</th>
+                    <th>Item</th>
+                    <th>Quantidade</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -29,13 +25,10 @@
                             {{item.description}}
                         </td>
                         <td>
-                            {{item.width}}
+                            {{item.quantity}}
                         </td>
                         <td>
-                            {{item.height}}
-                        </td>
-                        <td>
-                            <a href="/items/{{item.id}}/edit" class="button">Editar</a>
+                            <a href="/stock/{{item.id}}/edit" class="button">Editar</a>
                         </td>
                     </tr>
                 {% endfor %}
