--- a/public/styles.css
+++ b/public/styles.css
@@ -35,7 +35,7 @@ header {
 }
 
 header img {
-    width: 30vw;
+    height: 6vw;
     padding: 0 16px;
 }
 
@@ -113,7 +113,8 @@ a.edit-button {
 /* CONTAINERS */
 
 .index-container {
-    width: 60vw;
+    width: 70vw;
+    max-height: none;
 }
 
 .show-edit-create-container {
@@ -121,7 +122,7 @@ a.edit-button {
 }
 
 .kits-index-container {
-    width: 40vw;
+    width: 60vw;
 }
 
 /* TABLE */
