--- a/src/app/views/items/show.njk
+++ b/src/app/views/items/show.njk
@@ -6,6 +6,7 @@
             <h2>Detalhes</h2>
             <div class="buttons">
                 <a href="/items/{{item.id}}/edit" class="button edit-button">Editar</a>
+                <a href="/items/create" class="button">Novo Item</a>
                 <a href="/items" class="button">Itens</a>
             </div>
         </div>
