--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -30,7 +30,7 @@
                     </a>
                 </div>
                 <div class="link">
-                    <a href="/production">
+                    <a href="/packs">
                         <i class="material-icons">construction</i>
                         Produção
                     </a>
