--- a/src/app/views/packs/show.njk
+++ b/src/app/views/packs/show.njk
@@ -1,13 +1,14 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card show-edit-create-container">
+    <div class="card kits-index-container">
         <div class="card-header">
-            <h2>{{kit.description}}</h2>
+            <h2>{{pack.description}}</h2>
             <div class="buttons">
-                <a href="/kits/{{kit.id}}/createItem" class="button">Novo item</a>
-                <a href="/kits/{{kit.id}}/edit" class="button edit-button">Editar</a>
-                <a href="/kits" class="button">Kits</a>
+                <a href="/packs/{{pack.id}}/createItem" class="button">Novo item</a>
+                <a href="/packs/{{pack.id}}/edit" class="button edit-button">Editar</a>
+                <a href="#" class="button">Pronto</a>
+                <a href="/packs" class="button">Packs</a>
             </div>
         </div>
         <table width="100%">
@@ -32,7 +33,7 @@
                             {{item.quantity}}
                         </td>
                         <td>
-                            <a href="/kitsItems/{{item.id}}/edit" class="button">Editar</a>
+                            <a href="/packsItems/{{item.id}}/edit" class="button">Editar</a>
                         </td>
                     </tr>
                 {% endfor %}
