--- a/src/app/views/packs/fields.njk
+++ b/src/app/views/packs/fields.njk
@@ -1,6 +1,6 @@
 <div class="item">
     <div>Descrição</div>
     <div>
-        <input type="text" name="description" placeholder="Insira a descrição do kit aqui" value="{{ kit.description }}">
+        <input type="text" name="description" placeholder="Insira a descrição do pacote aqui" value="{{ pack.description }}">
     </div>
 </div>
