front-end updated

--- a/src/app/views/items/index.njk
+++ b/src/app/views/items/index.njk
@@ -11,7 +11,7 @@
         <table width="100%">
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th>Código do item</th>
                     <th>Descrição do item</th>
                     <th>Largura (mm)</th>
                     <th>Altura (mm)</th>
