--- a/src/app/views/kits/index.njk
+++ b/src/app/views/kits/index.njk
@@ -11,7 +11,7 @@
         <table width="100%">
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th>Código do Kit</th>
                     <th>Descrição do kit</th>
                     <th>Ação</th>
                 </tr>
