--- a/src/app/views/orders/edit.njk
+++ b/src/app/views/orders/edit.njk
@@ -5,18 +5,18 @@
         <div class="card-header">
             <h2>Detalhes</h2>
             <div class="buttons">
-                <form action="/items?_method=DELETE" method="post">
-                    <input type="hidden" name="id" value="{{ item.id }}">
-                    <button type="submit" class="delete-button">Excluir item</button>
+                <form action="/orders?_method=DELETE" method="post">
+                    <input type="hidden" name="id" value="{{ order.id }}">
+                    <button type="submit" class="delete-button">Excluir pedido</button>
                 </form>
 
             </div>
         </div>
-        <form action="/items?_method=PUT" method="post" class="details">
+        <form action="/orders?_method=PUT" method="post" class="details">
 
-            {% include "items/fields.njk" %}
+            {% include "orders/fields.njk" %}
 
-            <input type="hidden" name="id" value="{{ item.id }}">
+            <input type="hidden" name="id" value="{{ order.id }}">
 
             <button type="submit">Salvar item</button>
         </form>
