--- a/src/app/views/kits/show.njk
+++ b/src/app/views/kits/show.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card show-edit-create-container">
+    <div class="card kits-index-container">
         <div class="card-header">
             <h2>{{kit.description}}</h2>
             <div class="buttons">
@@ -13,7 +13,6 @@
         <table width="100%">
             <thead>
                 <tr>
-                    <th>ID</th>
                     <th>Item</th>
                     <th>Quantidade</th>
                     <th>Ação</th>
@@ -22,9 +21,6 @@
             <tbody>
                 {% for item in items %}
                     <tr>
-                        <td>
-                            {{item.id}}
-                        </td>
                         <td>
                             {{item.description}}
                         </td>
