--- a/src/app/views/orders/show.njk
+++ b/src/app/views/orders/show.njk
@@ -1,20 +1,56 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    <div class="card show-edit-create-container">
+    <div class="card .kits-index-container">
         <div class="card-header">
-            <h2>Detalhes</h2>
+            <h2>{{order.id}}</h2>
             <div class="buttons">
-                <a href="/orders/{{order.id}}/edit" class="button edit-button">Editar</a>
-                <a href="/orders" class="button">Itens</a>
+                {% if order.status != "Pronto" %}
+                    <a href="/orders/{{order.id}}/createItem" class="button">Novo item</a>
+                    <a href="#" class="button yellow-button">Gerar pacote</a>
+                    <form action="/ordersStock?_method=PUT" method="post" id="form-ready">
+                        <input type="hidden" name="id" value="{{ order.id }}">
+                        <button type="submit" class="button">Pronto</button>
+                    </form>
+                {% endif %}
+                <form action="/orders?_method=DELETE" method="post" id="form-delete">
+                    <input type="hidden" name="id" value="{{ order.id }}">
+                    <button type="submit" class="delete-button">Excluir pedido</button>
+                </form>
+                <a href="/orders" class="button">Pedidos</a>
             </div>
         </div>
-        <section class="details">
-            <div class="item">
-                <div>Descrição</div>
-                <div>{{order.client_id}}</div>
-            </div>
-        </section>
+        <table width="100%">
+            <thead>
+                <tr>
+                    <th>Item</th>
+                    <th>Quantidade</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in items %}
+                    <tr>
+                        <td>
+                            {{item.description}}
+                        </td>
+                        <td>
+                            {{item.quantity}}
+                        </td>
+                        <td>
+                            {% if order.status != "Pronto" %}
+                                <a href="/ordersItems/{{item.id}}/edit" class="button">Editar</a>
+                            {% else %}
+                                <a href="#" class="button disable-button">Editar</a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
+
+    {% include "confirmDelete.njk" %}
+    {% include "confirmReady.njk" %}
 
 {% endblock content %}
