--- a/src/app/views/orders/fields.njk
+++ b/src/app/views/orders/fields.njk
@@ -1,5 +1,5 @@
 <div class="item">
-    <div>Descrição</div>
+    <div>Cliente</div>
     <div>
         <select name="client_id">
             {% for client in clients %}
