--- a/src/app/views/stock/edit.njk
+++ b/src/app/views/stock/edit.njk
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card show-edit-create-container">
         <div class="card-header">
-            <h2>Detalhes</h2>
+            <h2>{{item.description}}</h2>
         </div>
         <form action="/stock?_method=PUT" method="post" class="details">
 
