--- a/public/styles.css
+++ b/public/styles.css
@@ -11,22 +11,21 @@
     margin: 0;
     padding: 0;
     border: none;
-    box-sizing: border-box;
 }
 
 body {
     background-color: var(--cyan-color);
     font-family: 'Roboto', sans-serif;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100%;
 }
 
 /* HEADER */
 
 header {
     background-color: white;
-    width: 100vw;
+    width: 100%;
     padding: 32px;
+    margin: 0 auto;
     text-align: center;
     box-sizing: border-box;
     display: flex;
@@ -37,14 +36,13 @@ header {
 
 header img {
     height: 6vw;
-    padding: 0 16px;
 }
 
 header .links {
     font-size: 22px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10%;
+    gap: 8%;
     color: #777;
 }
 
@@ -111,10 +109,7 @@ a.edit-button {
     background-color: var(--yellow-color);
 }
 
-.buttons a + a,
-.buttons a + form,
-.buttons form + a,
-.buttons form + form {
+.buttons a+a, .buttons a+form, .buttons form+a, .buttons form+form {
     margin-left: 12px;
 }
 
@@ -224,4 +219,16 @@ input, select {
 input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+@media (max-width: 1440px) {
+    header .links {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 1200px) {
+    header .links {
+        font-size: 15px;
+    }
 }
